<resources>
    <string name="app_name">Valparaiso</string>

    <string name="botonhoteles">Hoteles</string>
    <string name="botonrestaurante">Restaurantes</string>
    <string name="botonsitios">sitios turisticos</string>

    <string name="titulohomehoteles">Hoteles en Valparaiso</string>
    <string name="descripcionhomehoteles">En nuestro pueblo encontraras alojamientos desde 35000 COP,
        hasta lujosas cañas dotadas de todos los elementos para promover un descanso restaurador</string>
    <string name="botonhomehoteles">Ver Hoteles</string>

    <string name="titulohomerestaurantes">Restaurantes en Valparaiso</string>
    <string name="descripcionhomerestaurantes">En el restaurante La Aldea puedes encontrar los platos
        tipicos de la region.</string>
    <string name="botonhomerestauantes">Ver Restaurantes</string>

    <string name="titulohomesitios">Sitios turisticos en Valparaiso</string>
    <string name="descripcionhomesitios">El monumento al Buey es un simbolo de gran interes ya que el
        buey siempre fue usado para labrar la tierra en Valparaiso de alli sus fiestas principales, las fiestas del buey </string>
    <string name="botonhomesitios">Ver Sitios Turisticos</string>

    <string name="tituloacerca">Natalia Martinez B</string>
    <string name="descripcionacerca">Desarrolladora de software junior y diseñadora grafica, apasionada
        por la ilustracion, amante de las aves, y la fotografia. </string>



    <string name="menuopcion1">Ingles</string>
    <string name="menuopcion2">Español</string>
    <string name="menuopcion3">Portugues</string>
    <string name="menuopcion4">Reseña</string>
    <string name="menuopcion5">Acerca de</string>

    <string name="tituloresena">Historia de Valparaiso</string>
    <string name="inforesena">Valparaíso, es la tierra del General Rafael Uribe Uribe. Su referente
        más conocido es el tronco de la vieja Ceiba que durante años le dio sombra al Parque Principal.
        Claro que ése no es su único atractivo, pues cuenta con petroglifos, una caverna, cascadas y
        muchos otros lugares de gran belleza que hacen parte de la ruta que le proponen al turista.
        Este municipio tiene muchas fincas de recreo y en su jurisdicción, aunque llegando por La
        Pintada, está el imponente Cañón de Pipintá, donde está el mejor recorrido para la práctica
        del rafting que tiene Antioquia.</string>

</resources>