<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/valparaisofondo01"
    tools:context=".Home">



    <TextView
        android:id="@+id/titulohome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="VALPARAISO-ANTIOQUIA"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.1"
        />
    <Button
        android:id="@+id/botonhoteles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulohome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/yellowgreen"
        android:text="@string/botonhoteles"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/botonrestaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botonhoteles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/yellowgreen"
        android:text="@string/botonrestaurante"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/botonsitios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botonrestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/yellowgreen"
        android:text="@string/botonsitios"
        android:textColor="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>