<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restaurante">

    <ImageView
        android:id="@+id/imgrestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/laaldea"
        android:adjustViewBounds="true"
        app:layout_constraintVertical_bias="0"

        />

    <TextView
        android:id="@+id/titulohomerestaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgrestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/titulohomerestaurantes"
        android:textAlignment="center"
        android:textSize="28dp"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/txtrestaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulohomerestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/descripcionhomerestaurantes"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintVertical_bias="0.1"
        />

    <ImageView
        android:id="@+id/manohoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mano"
        app:layout_constraintTop_toBottomOf="@id/titulohomerestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.8"
        />

    <Button
        android:id="@+id/botonhomerestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtrestaurantes"
        app:layout_constraintStart_toEndOf="@id/manohoteles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.2"
        android:backgroundTint="@color/green"
        android:text="@string/botonhomehoteles"
        />
</androidx.constraintlayout.widget.ConstraintLayout>